<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/dp300"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/dp12"
    android:background="@color/colorBlack"
    >


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp25"
        android:layout_gravity="center_horizontal"
        android:text="@string/save_record" />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gamer_name"
            android:textSize="@dimen/sp20"
            />
        <EditText
            android:id="@+id/nameEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/sp20"
            android:maxLength="8"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <TextView
        android:text="@string/your_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp20"/>
    <TextView
        android:id="@+id/sctxv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/sp20"/>
    </LinearLayout>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:layout_gravity="center_horizontal">
    <Button
        android:id="@+id/savebtn"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/save"/>
    <Button
        android:id="@+id/nosavebtn"
        android:layout_marginLeft="@dimen/dp30"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/cancel"/>
</LinearLayout>
</LinearLayout> 
